--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
     <%= tag :meta, :name => 'stripe-key', :content => Rails.configuration.stripe[:publishable_key] %>
 
-    <%= javascript_include_tag 'http://js.pusher.com/2.1/pusher.min.js' %>
+    <%= javascript_include_tag 'https://d3dy5gmtp8yhk7.cloudfront.net/2.1/pusher.min.js' %>
     <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
     <%= csrf_meta_tags %>
     <%= yield :head %>
