--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -1,4 +1,4 @@
-<div data-entry_id="<%= @entry_id %>" class="capitalcontent gamecenter ng-bootstrap-angular">
+<div data-entry_id="<%= @entry_id %>" class="capitalcontent gamecenter">
 <!--Login Section-->
 
 <ul class="list-inline title">
@@ -255,7 +255,7 @@
     <th>PRIZES</th>
   </tr>
   <% @entries.each do |entry| %>
-  <tr>
+  <tr data-entry-id="<%= entry.id %>">
     <td>1</td>
     <td><%= image_tag "user.png", class: "user"%></td>
     <td><span class="green"><%= entry.lineup.user.username %></span></td>
@@ -275,331 +275,13 @@
 <div class="clearfix"></div>
 <!--/List Area-->
 
-<div class="col-md-5 scorecard pull-left">
-  <div class="col-md-2 panelOne"><strong class="panelStrong">POS</strong>
+<%= render partial: 'lineup_row_template' %>
 
-    <h2 class="panelHeading">1</h2>
-  </div>
-  <div class="col-md-8 panelTwo">
-    <p class="user"><%= image_tag "user.png" %> <span class="green mylineup-username">{{my.username}}</span></p>
-
-    <div class="clearfix"></div>
-    <p class="quarters"> 6 Quarters Remaining
-      <progress value="20" max="100"></progress>
-    </p>
-  </div>
-  <div class="col-md-2 panelThree"><strong class="panelStrong">SCORE</strong>
-
-    <h2 class="panelHeading mylineup-total-score"><%= @entry.current_fantasypoints %></h2>
-  </div>
-  <div class="clearfix"></div>
-  <!--Score Card-->
-  <div class="mylineup-spots">
-    <div class="scorecard2 template">
-      <table class="scorecardTable" cellpadding="10" cellspacing="10">
-        <tbody>
-        <tr>
-          <td><h1 class="role">PG</h1></td>
-          <td><strong class="player-name">Damian Lillard</strong>
-
-            <p class="por">
-              <strong>POR</strong> 109 @ <strong>MIN</strong> 120 FINAL<br>
-              <span class="records">
-                0 P, 0 R, 0 A, 0 S, 0 B, 0 T
-              </span>
-            </p>
-          </td>
-          <td>
-            $<span class="salary">79</span> <br>
-            SALARY
-          </td>
-          <td>27.5% <br>
-            OWNED
-          </td>
-          <td><h1 class="score">57.2</h1></td>
-        </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-
-  <!--<div ng-repeat="lineup_spot in lineup_spots">
-    <div class="scorecard2">
-      <table class="scorecardTable" cellpadding="10" cellspacing="10">
-        <tbody>
-        <tr>
-          <td><h1 class="role">{{lineup_spot.sport_position.name}}</h1></td>
-          <td><strong>{{lineup_spot.player.first_name}} {{lineup_spot.player.last_name}}</strong>
-
-            <p class="por">
-              <strong>POR</strong> 109 @ <strong>MIN</strong> 120 FINAL<br>
-              {{lineup_spot.stats['points']}} P, {{lineup_spot.stats['rebounds']}} R, {{lineup_spot.stats['assists']}} A, {{lineup_spot.stats['steals']}} S, {{lineup_spot.stats['blocks']/2}} B, {{lineup_spot.stats['turnovers']}} T
-            </p>
-          </td>
-          <td>
-            ${{lineup_spot.player.salary | number}} <br>
-            SALARY
-          </td>
-          <td>27.5% <br>
-            OWNED
-          </td>
-          <td><h1>{{lineup_spot.score}}</h1></td>
-        </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>-->
-  <!--End Score Card--> 
+<div class="col-md-5 scorecard pull-left" data-entry-id="<%= @entry.id %>">
+    <%= render partial: 'inner_scorecard' %>
 </div>
-<div class="col-md-5 scorecard pull-right">
-  <div class="col-md-2 panelOne"><strong class="panelStrong">POS</strong>
-
-    <h2 class="panelHeading">831</h2>
-  </div>
-  <div class="col-md-8 panelTwo">
-    <p class="user"><%= image_tag "user.png" %> <span class="green">julius100</span></p>
-
-    <div class="clearfix"></div>
-    <p class="quarters"> 6 Quarters Remaining
-      <progress value="20" max="100"></progress>
-    </p>
-  </div>
-  <div class="col-md-2 panelThree">
-    <strong class="panelStrong">SCORE</strong>
-    <h2 class="panelHeading">270.2</h2>
-  </div>
-  <div class="clearfix"></div>
-  <!--Score Card-->
-  <div class="scorecard2 white">
-    <table class="scorecardTable" cellpadding="10" cellspacing="10">
-      <tbody>
-      <tr>
-        <td><h1 class="role">PG</h1></td>
-        <td><strong>Damian Lillard</strong>
-
-          <p class="por"><strong>POR</strong> 109 @ <strong>MIN</strong> 120 FINAL<br>
-            36 P, 6 R, 6 A, 3 S, 1 B</p>
-        </td>
-        <td>
-          $79 <br>
-          SALARY
-        </td>
-        <td>27.5% <br>
-          OWNED
-        </td>
-        <td><h1 class="greeScore">57.2</h1></td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="clearfix"></div>
-  <div class="scorecard2">
-    <table class="scorecardTable" cellpadding="10" cellspacing="10">
-      <tbody>
-      <tr>
-        <td><h1 class="role">PG</h1></td>
-        <td><strong>Damian Lillard</strong>
-
-          <p class="por"><strong>POR</strong> 109 @ <strong>MIN</strong> 120 FINAL<br>
-            36 P, 6 R, 6 A, 3 S, 1 B</p>
-        </td>
-        <td>
-          $79 <br>
-          SALARY
-        </td>
-        <td>27.5% <br>
-          OWNED
-        </td>
-        <td><h1>57.2</h1></td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="clearfix"></div>
-  <div class="scorecard2">
-    <table class="scorecardTable" cellpadding="10" cellspacing="10">
-      <tbody>
-      <tr>
-        <td><h1 class="role">SG</h1></td>
-        <td><strong>Damian Lillard</strong>
-
-          <p class="por"><strong>POR</strong> 109 @ <strong>MIN</strong> 120 FINAL<br>
-            36 P, 6 R, 6 A, 3 S, 1 B</p>
-        </td>
-        <td>
-          $79 <br>
-          SALARY
-        </td>
-        <td>27.5% <br>
-          OWNED
-        </td>
-        <td><h1>57.2</h1></td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="clearfix"></div>
-  <div class="scorecard2 white">
-    <table class="scorecardTable" cellpadding="10" cellspacing="10">
-      <tbody>
-      <tr>
-        <td><h1 class="role">SG</h1></td>
-        <td><strong>Damian Lillard</strong>
-
-          <p class="por"><strong>POR</strong> 109 @ <strong>MIN</strong> 120 FINAL<br>
-            36 P, 6 R, 6 A, 3 S, 1 B</p>
-        </td>
-        <td>
-          $79 <br>
-          SALARY
-        </td>
-        <td>27.5% <br>
-          OWNED
-        </td>
-        <td><h1 class="greeScore">57.2</h1></td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="clearfix"></div>
-  <div class="scorecard2">
-    <table class="scorecardTable" cellpadding="10" cellspacing="10">
-      <tbody>
-      <tr>
-        <td><h1 class="role">SF</h1></td>
-        <td><strong>Damian Lillard</strong>
-
-          <p class="por"><strong>POR</strong> 109 @ <strong>MIN</strong> 120 FINAL<br>
-            36 P, 6 R, 6 A, 3 S, 1 B</p>
-        </td>
-        <td>
-          $79 <br>
-          SALARY
-        </td>
-        <td>27.5% <br>
-          OWNED
-        </td>
-        <td><h1>57.2</h1></td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="clearfix"></div>
-  <div class="scorecard2 white">
-    <table class="scorecardTable" cellpadding="10" cellspacing="10">
-      <tbody>
-      <tr>
-        <td><h1 class="role">SF</h1></td>
-        <td><strong>Damian Lillard</strong>
-
-          <p class="por"><strong>POR</strong> 109 @ <strong>MIN</strong> 120 FINAL<br>
-            36 P, 6 R, 6 A, 3 S, 1 B</p>
-        </td>
-        <td>
-          $79 <br>
-          SALARY
-        </td>
-        <td>27.5% <br>
-          OWNED
-        </td>
-        <td><h1 class="greeScore">57.2</h1></td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="clearfix"></div>
-  <div class="scorecard2">
-    <table class="scorecardTable" cellpadding="10" cellspacing="10">
-      <tbody>
-      <tr>
-        <td><h1 class="role">PF</h1></td>
-        <td><strong>Damian Lillard</strong>
-
-          <p class="por"><strong>POR</strong> 109 @ <strong>MIN</strong> 120 FINAL<br>
-            36 P, 6 R, 6 A, 3 S, 1 B</p>
-        </td>
-        <td>
-          $79 <br>
-          SALARY
-        </td>
-        <td>27.5% <br>
-          OWNED
-        </td>
-        <td><h1>57.2</h1></td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="clearfix"></div>
-  <div class="scorecard2 white">
-    <table class="scorecardTable" cellpadding="10" cellspacing="10">
-      <tbody>
-      <tr>
-        <td><h1 class="role">PF</h1></td>
-        <td><strong>Damian Lillard</strong>
-
-          <p class="por"><strong>POR</strong> 109 @ <strong>MIN</strong> 120 FINAL<br>
-            36 P, 6 R, 6 A, 3 S, 1 B</p>
-        </td>
-        <td>
-          $79 <br>
-          SALARY
-        </td>
-        <td>27.5% <br>
-          OWNED
-        </td>
-        <td><h1 class="greeScore">57.2</h1></td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="clearfix"></div>
-  <div class="scorecard2">
-    <table class="scorecardTable" cellpadding="10" cellspacing="10">
-      <tbody>
-      <tr>
-        <td><h1 class="role">C</h1></td>
-        <td><strong>Damian Lillard</strong>
-
-          <p class="por"><strong>POR</strong> 109 @ <strong>MIN</strong> 120 FINAL<br>
-            36 P, 6 R, 6 A, 3 S, 1 B</p>
-        </td>
-        <td>
-          $79 <br>
-          SALARY
-        </td>
-        <td>27.5% <br>
-          OWNED
-        </td>
-        <td><h1>57.2</h1></td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="clearfix"></div>
-  <div class="scorecard2 white">
-    <table class="scorecardTable" cellpadding="10" cellspacing="10">
-      <tbody>
-      <tr>
-        <td><h1 class="role">UTL</h1></td>
-        <td><strong>Damian Lillard</strong>
-
-          <p class="por"><strong>POR</strong> 109 @ <strong>MIN</strong> 120 FINAL<br>
-            36 P, 6 R, 6 A, 3 S, 1 B</p>
-        </td>
-        <td>
-          $79 <br>
-          SALARY
-        </td>
-        <td>27.5% <br>
-          OWNED
-        </td>
-        <td><h1 class="greeScore">57.2</h1></td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="clearfix"></div>
+<div id="competitor-scorecard" class="col-md-5 scorecard pull-right" data-entry-id="">
+  <%= render partial: 'inner_scorecard' %>
 </div>
 
 </div>
